<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/add_item"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/item_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:text="Item"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/item_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_label"
                android:hint="@string/hint_item" />

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_input"
                android:text="Quantity"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/quantity_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/quantity_label"
                android:hint="@string/hint_quantity"
                android:inputType="number" />

            <TextView
                android:id="@+id/color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quantity_input"
                android:text="Color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/color_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/color_label"
                android:hint="@string/hint_color" />

            <TextView
                android:id="@+id/size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/color_input"
                android:text="Size"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/size_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/size_label"
                android:hint="@string/hint_size" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/size_input"
                android:text="@string/save_button"
                app:backgroundTint="#CD6D8F" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>